--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,71 @@
-
-
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
+  font-family: "Poppins", sans-serif;
+
+
+}
+
+a{
+  text-decoration: none;
+}
+
+ul{
+  list-style: none;
+}
+
+li{
+  list-style: none;
+}
+
+img{
+  width: 100%;
+  height: 100%;
+}
+
+
+
+.btn {
+  color: #fff;
+  background-color: #359EFF;
+  font-size: 17px;
+  font-weight: 700;
+  width: 125px;
+  padding: 16px 24px;
+  line-height: 22.4px;
+  height: 54px;
+  border: 1px none;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 10px;
+  -webkit-border-raduis: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  transition: background-color 0.5s;
+  -webkit-transition: background-color 0.5s;
+  -moz-transition: background-color 0.5s;
+  -webkit-transition: background-color 0.5s;
+  -o-transition: background-color 0.5s;
+  box-shadow: 0 1px 2px 0 rgba(232, 235, 239, 0.95);
+}
+
+.btn:hover {
+
+  font-weight: 700;
+  border: 2px solid #fff;
+  background: #fff;
+  color: #359EFF;
+
+}
+
+.btn2{
+  background: #F6C274;
+  color: #fff;
 }
